Used Chocolatey.lib for a minor performance improvement

--- a/source/UninstallTools/UninstallTools.csproj
+++ b/source/UninstallTools/UninstallTools.csproj
@@ -65,6 +65,7 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="chocolatey.lib" Version="0.12.1" />
     <PackageReference Include="Microsoft.VisualBasic" Version="10.3.0" />
     <PackageReference Include="System.Management" Version="5.0.0" />
     <PackageReference Include="TaskScheduler" Version="2.8.18" />
